force-app/main/default/objects/Secondary_Invoice__c/Secondary_Invoice__c.object-meta.xml
<CustomObject>
    <label>Secondary Invoice</label>
    <nameField>
        <displayFormat>{YYYY} / {MM} / {0000}</displayFormat>
        <label>Secondary Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>