force-app/main/default/objects/Secondary_Invoice__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <label>Aging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>