force-app/main/default/objects/Secondary_Invoice__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <label>Beat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>