force-app/main/default/objects/Secondary_Invoice__c/fields/Customer_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_GST_Number__c</fullName>
    <formula>Customer__r.GST_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer GST Number</label>
    <type>Text</type>
</CustomField>