force-app/main/default/objects/Secondary_Invoice__c/fields/Delivery_remarks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_remarks__c</fullName>
    <label>Delivery remarks</label>
    <type>TextArea</type>
</CustomField>