force-app/main/default/objects/Secondary_Invoice__c/fields/Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Name__c</fullName>
    <formula>Order__r.Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Name</label>
    <type>Text</type>
</CustomField>