force-app/main/default/objects/Secondary_Invoice__c/fields/Exempt_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Supplies__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exempt Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>