force-app/main/default/objects/Secondary_Invoice__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <summarizedField>Secondary_Invoice_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Secondary_Invoice_Item__c.Secondary_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>