force-app/main/default/objects/Secondary_Invoice__c/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <label>Not in Use</label>
    <length>15</length>
    <type>Text</type>
</CustomField>