force-app/main/default/objects/Secondary_Invoice__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <formula>IF(TEXT(Customer__r.State__c) == TEXT(Store__r.State__c) , 0 ,  Total_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>