force-app/main/default/objects/Secondary_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <formula>IF(ISBLANK(Grand_Total__c) || Grand_Total__c = 0, &apos;Not Paid&apos;,
IF(Pending_Amount__c = 0, &apos;Paid&apos;,
IF(Pending_Amount__c = Grand_Total__c, &apos;Not Paid&apos;,
&apos;Partially Paid&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>