force-app/main/default/objects/Secondary_Invoice__c/fields/Non_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Amount__c</fullName>
    <label>Non Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>