force-app/main/default/objects/Secondary_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Secondary Invoices</relationshipLabel>
    <relationshipName>Secondary_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>