force-app/main/default/objects/Secondary_Invoice__c/fields/Paid_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Amount__c</fullName>
    <label>Paid Invoice Amount</label>
    <summarizedField>Secondary_Receipt_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Secondary_Receipt_Item__c.Secondary_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>