force-app/main/default/objects/Secondary_Invoice__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <formula>IF(ISBLANK(TEXT(Customer__r.State__c)), &apos;&apos;, TEXT(Customer__r.State__c)+&apos;, &apos;)
+IF(ISBLANK(TEXT(Customer__r.District__c)), &apos;&apos;, TEXT(Customer__r.District__c)+&apos;, &apos;)
+IF(ISBLANK(Customer__r.Street__c), &apos;&apos;, Customer__r.Street__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Supply</label>
    <type>Text</type>
</CustomField>