force-app/main/default/objects/Secondary_Invoice__c/fields/Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Charge__c</fullName>
    <formula>&apos;N&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reverse Charge</label>
    <type>Text</type>
</CustomField>