force-app/main/default/objects/Secondary_Invoice__c/fields/Secondary_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Category__c</fullName>
    <formula>TEXT(Customer__r.Secondary_Customer_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Customer Category</label>
    <type>Text</type>
</CustomField>