force-app/main/default/objects/Secondary_Invoice__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <formula>IF(TEXT(Customer__r.State__c) == TEXT(Store__r.State__c) , Total_Tax__c / 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>