force-app/main/default/objects/Secondary_Invoice__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Customer_Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Invoices</relationshipLabel>
    <relationshipName>Secondary_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>