force-app/main/default/objects/Secondary_Invoice__c/fields/Taxable_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Turnover__c</fullName>
    <formula>Non_Taxable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>