force-app/main/default/objects/Secondary_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Store__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Delivery_remarks__c</columns>
    <columns>Beat_Name__c</columns>
    <columns>Paid_Invoice_Amount__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>GST_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>