force-app/main/default/objects/Secondary_Invoice__c/listViews/This_Year.listView-meta.xml
<ListView>
    <fullName>This_Year</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Store__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Delivery_remarks__c</columns>
    <columns>Paid_Invoice_Amount__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>GST_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year</label>
</ListView>